# ros2_2025

./: README.md  frames_2025-01-21_19.13.36.gv
src/auto_car/: CMakeLists.txt  package.xml
src/auto_car/launch/: ign_rviz.launch.py  rviz.launch.py
src/auto_car/rviz/: urdf_config.rviz
src/auto_car/urdf/: car.urdf.xacro  inertia.xacro  ros_interface.xacro  sensors.xacro  wheel.xacro
src/auto_car/worlds/: ignition_worlds
src/auto_mobile_robot/: CMakeLists.txt  frames_2025-01-21_02.36.49.gv  package.xml
src/auto_mobile_robot/archives/: chatGPT-msgs.txt  kinect_raw_vs_z.md  testing freq.cs
src/auto_mobile_robot/launch/: basic_mobile_robot.launch.py  display.launch.py  gazebo_rviz.launch.py  gazebo_rviz_nav2.launch.py  ignition_rviz.launch.py  kinect_depth_rviz.launch.py
src/auto_mobile_robot/meshes/: kinect
src/auto_mobile_robot/models/: auto_mobile_robot.urdf  model.config  model.sdf
src/auto_mobile_robot/models/auto_mobile_robot_description/: model.config  model.sdf  test_model.sdf
src/auto_mobile_robot/models/static_robot_description/: model.config  model.urdf
src/auto_mobile_robot/params/: nav2_params.yaml  nav2_params_galactic.yaml
src/auto_mobile_robot/rviz/: display.rviz  nav2_config.rviz  point_cloud_config.rviz  urdf_config.rviz
src/auto_mobile_robot/scripts/: camera_publisher.py  kinect_audio.py  kinect_ros_test.py  kinect_scan_3d.py  kinect_test.py  kinect_z_calibrator.py  model_node.py  rgbd_solver.py  rgbd_test.py
src/auto_mobile_robot/src/: kinect_reader  kinect_reader.cpp
src/auto_mobile_robot/tests/: frames_2025-01-18_23.54.06.gv
src/auto_mobile_robot/worlds/: house.sdf  smalltown.sdf  smalltown.world
src/robot_arm/: package.xml  setup.py
src/robot_arm/robot_arm/: model_node.py
src/robot_v2/: CMakeLists.txt  README.md  package.xml
src/robot_v2/launch/: robot.launch.py
src/robot_v2/rviz/: robot_config.rviz
src/robot_v2/urdf/: robot.urdf.xacro  sensors.xacro
