<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_v2</name>
  <version>0.1.0</version>
  <description>A ROS2 package for a robot with RGB and depth cameras, designed for simulation in Gazebo Ignition and visualization in RViz2.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <!-- <exec_depend>rclpy</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <!-- <exec_depend>sensor_msgs</exec_depend> -->
  <exec_depend>setuptools</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>robot_localization</exec_depend> -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>


  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <!-- <depend>rviz2</depend> -->
  <!-- <depend>xacro</depend> -->
  <depend>std_msgs</depend>
  <depend>depthimage_to_laserscan</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>